--- a/templates/question.html
+++ b/templates/question.html
@@ -3,16 +3,21 @@
 
   <h1>{{ question.question }}</h1>
 
-  <form action="/answer" method="POST">
-
-      <!-- you should have one item like this for every choice -->
+  <form action="/answer/{{ q_idx }}" method="POST">
+      {% for choice in choices %}
       <p>
         <input
             type="radio"
             name="answer"
             value="value-goes-here">
-        choice-goes-here
+        {{ choice }}
       </p>
+      {% endfor %}
+
+      {% if question.allow_text %}
+        <label>Comments:</label>
+        <input type="text" name="comment">
+      {% endif %}
 
     <button>Continue</button>
   </form>
