finished basic survey functionality

--- a/templates/completion.html
+++ b/templates/completion.html
@@ -3,5 +3,12 @@
 {% block content %}
 
   <h1>Thanks for completing this survey!</h1>
+  {% for tuple in qa_tuples %}
+
+  <li><span style="font-weight: bold">{{tuple[0]}}</span> {{tuple[1]}}</li>
+
+  {% endfor %}
+
+
 
 {% endblock %}
