--- a/templates/survey_start.html
+++ b/templates/survey_start.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
+{% for msg in get_flashed_messages() %}
+<p>{{ msg }}</p>
+{% endfor %}
+
   <h1> {{ title }}</h1>
   <p>
     {{ instructions }}
